# Mirror-V0

./: .gitignore  README.md
app/: CMakeLists.txt  TODO.md
app/face_recog/: detect_human.py
app/src/: App.cpp  App.h  main.cpp
app/src/modules/opencv/: VideoCam.cpp  VideoCam.h  videoCam.cpp  videoCam.h
app/src/modules/resources/: Colors.cpp  Colors.h  Fonts.cpp  Fonts.h
app/src/modules/screen/: Screen.cpp  Screen.h
app/src/modules/utils/: FPSMetric.cpp  Size.h  Utils.cpp  Utils.h
app/src/modules/widgets/: DateTime.cpp  DateTime.h  Widget.cpp  Widget.h
app/src/modules/widgets/basic/: Layout.cpp  Layout.h  Text.cpp  Text.h  Widget.cpp  Widget.h
app/src/modules/widgets/components/: Text.cpp  Text.h
app/src/resourceLoaders/: Colors.cpp  Colors.h  Fonts.cpp  Fonts.h  Images.cpp  Images.h
app/src/utils/: FPSMetric.cpp  FPSMetric.h  Requester.cpp  Requester.h  RunOnceAsync.cpp  RunOnceAsync.h  Utils.cpp  Utils.h  Value.cpp  Value.h
app/src/views/: screens.xml
app/src/widgets/: BaseWidget.cpp  BaseWidget.h  Properties.cpp  Properties.h  WidgetFactory.cpp  WidgetFactory.h
app/src/widgets/activity/: ActivityFactory.cpp  ActivityFactory.h  BaseActivity.cpp  BaseActivity.h
app/src/widgets/activity/user/: MainActivity.cpp  MainActivity.h
app/src/widgets/user/: DatetimeWidget.cpp  DatetimeWidget.h  ImageWidget.cpp  ImageWidget.h  NewsWidget.cpp  NewsWidget.h  SolarSystemWidget.cpp  SolarSystemWidget.h  TextWidget.cpp  TextWidget.h  WeatherWidget.cpp  WeatherWidget.h
app/views/: datetimeWidget.xml  imageWidget.xml  newsWidget.xml  textWidget.xml  weatherWidget.xml
app/views/activity/: mainActivity.xml
test/: CMakeLists.txt  main.cpp
